# CIObserver

./: .gitignore  .gitmodules  CMakeLists.txt  InternalFunctions.cmake
data/ui/: mainWindow.ui
src/: CIObserverApp.cpp  CIObserverApp.hpp  CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt
src/core/include/: CIManager.hpp  ConnectionFacade.hpp  Exceptions.hpp  GlobalDefs.hpp  GlobalTypes.hpp  Helpers.hpp  ICIManager.hpp  IConnectionFacade.hpp  IJob.hpp  IJobFactory.hpp  IJobManager.hpp  ITimeObserver.hpp  ITimer.hpp  ITimerObserver.hpp  Job.hpp  JobFactory.hpp  JobManager.hpp  JobStatus.hpp  Timer.hpp
src/core/src/: CIManager.cpp  ConnectionFacade.cpp  Job.cpp  JobFactory.cpp  JobManager.cpp  Timer.cpp
src/core/tests/: JobManagerTests.cpp  JobTests.cpp  TimerTests.cpp
src/core/tests/mocks/: ICIManagerMock.hpp  IConnectionFacadeMock.hpp  IJobFactoryMock.hpp  IJobManagerMock.hpp  IJobMock.hpp  ITimerObserverMock.hpp
src/gui/: CMakeLists.txt
src/gui/include/: JobEditDialog.hpp  MainWindow.hpp
src/gui/src/: JobEditDialog.cpp  MainWindow.cpp
